destinations.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: xapi
spec:
  host: xapi
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
