rules1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xapi
spec:
  hosts:
    - xapi
  http:
  - route:
    - destination:
        host: xapi
        subset: v1
