rules2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xapi
spec:
  hosts:
    - xapi
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: xapi
        subset: v2
  - route:
    - destination:
        host: xapi
        subset: v1
